--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -71,3 +71,6 @@ services:
     ports:
       - 3000:3000
     stdin_open: true
+    environment:
+      REACT_APP_API_URL: 'http://localhost:3001'
+      REACT_APP_SOCKET_URL: 'http://localhost:3001'
